--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-  <div id="shop"></div>
+  <div id="shop">
+
+    <div id="shop-choices"></div>
+
+  </div>
 
   <div id="battle"></div>
 
