new js file's for npc and shop

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
   <div id="battle"></div>
 
+  <script src="js/npc.js"></script>
+  <script src="js/shop.js"></script>
   <script src="js/index.js"></script>
 
 </body>
