--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
   </div>
 
-  <div id="battle"></div>
+  <div id="battle">
+
+    <div class="enemy"></div>
+
+  </div>
 
   <script src="js/npc.js"></script>
   <script src="js/shop.js"></script>
